컴포넌트 명칭 수정 외
- Filter 컴포넌트 명칭 수정 (QuizFilter)
- QuizFilter 컴포넌트 필터 선택에 따른 렌더링 변화 적용
- QuizCard 컴포넌트 작업

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -36,3 +36,12 @@ a {
 input:focus {
   outline: none;
 }
+
+/* 이외 설정 */
+// 텍스트 선택 차단
+.select_ban {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
