--- a/app/styles/var.module.scss
+++ b/app/styles/var.module.scss
@@ -11,7 +11,8 @@ $font-size-2xl: 22px;
 
 // 색상
 $main-green: #6bde85;
-$main-gray: #eaeaea;
+$main-shadow-gray: #aaaaaa;
 $main-deep-gray: #c4c4c4;
+$main-gray: #eaeaea;
 $white: #ffffff;
 $black: #000000;
