--- a/app/styles/var.module.scss
+++ b/app/styles/var.module.scss
@@ -11,8 +11,10 @@ $font-size-2xl: 22px;
 
 // 색상
 $main-green: #6bde85;
+$main-deep-green: #65cf7c;
 $main-shadow-gray: #aaaaaa;
 $main-deep-gray: #c4c4c4;
 $main-gray: #eaeaea;
 $white: #ffffff;
 $black: #000000;
+$red: #ff0000;
