--- a/app/styles/main.module.scss
+++ b/app/styles/main.module.scss
@@ -1,31 +1,24 @@
-/* Main 컴포넌트 */
+/* Main 페이지 */
 @use 'var.module.scss' as v;
 
-.container {
+.contents {
   display: flex;
-  min-width: 1080px;
+  flex-direction: column;
   justify-content: center;
-  padding: 2rem 0;
-  .contents {
+  align-items: center;
+
+  .searchFilter {
     display: flex;
-    width: 1080px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 2.4rem;
+    padding-bottom: 0.3rem;
+    margin-left: 0.5rem;
+  }
 
-    .searchFilter {
-      display: flex;
-      width: 100%;
-      height: 2.4rem;
-      padding-bottom: 0.3rem;
-      margin-left: 0.5rem;
-    }
-
-    .quizList {
-      display: grid;
-      grid-template-columns: 250px 250px 250px 250px;
-      gap: 25px 25px;
-      padding: 1rem 0 1rem 0;
-    }
+  .quizList {
+    display: grid;
+    grid-template-columns: 250px 250px 250px 250px;
+    gap: 25px 25px;
+    padding: 1rem 0 1rem 0;
   }
 }
