--- a/app/styles/header.module.scss
+++ b/app/styles/header.module.scss
@@ -1,7 +1,7 @@
 /* Header 컴포넌트 */
 @use 'var.module.scss' as v;
 
-.container {
+.wrapper {
   display: flex;
   width: 100%;
   align-items: center;
