--- a/app/styles/join.module.scss
+++ b/app/styles/join.module.scss
@@ -1,8 +1,8 @@
 /* Join 페이지 */
 @use 'var.module.scss' as v;
 
-.contents {
-  .joinWrapper {
+.container {
+  .contents {
     display: flex;
     width: 600px;
     height: 550px;
@@ -12,7 +12,7 @@
     border: 1px solid v.$main-deep-gray;
     overflow: hidden;
 
-    .inputWrapper {
+    .input {
       display: flex;
       position: relative;
       width: 22rem;
