--- a/app/styles/main.module.scss
+++ b/app/styles/main.module.scss
@@ -7,18 +7,33 @@
   justify-content: center;
   align-items: center;
 
-  .searchFilter {
+  .filterMore {
     display: flex;
     width: 100%;
-    height: 2.4rem;
-    padding-bottom: 0.3rem;
-    margin-left: 0.5rem;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1rem 2rem;
+
+    .quizFilter {
+      display: flex;
+    }
+
+    .more {
+      display: flex;
+      .more_icon {
+        fill: v.$main-deep-gray;
+
+        &:hover {
+          cursor: pointer;
+          fill: v.$main-green;
+        }
+      }
+    }
   }
 
   .quizList {
-    display: grid;
-    grid-template-columns: 250px 250px 250px 250px;
-    gap: 25px 25px;
-    padding: 1rem 0 1rem 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 }
