--- a/app/styles/quizCard.module.scss
+++ b/app/styles/quizCard.module.scss
@@ -161,15 +161,36 @@
     width: 100vw;
     height: calc(100vw * 0.9);
 
+    .quizInfo {
+      .title {
+        font-size: v.$font-size-lg;
+      }
+    }
+
     .type {
       width: 3rem;
       height: 1.8rem;
+    }
+
+    .detail {
+      .label {
+        font-size: v.$font-size-sm;
+      }
+
+      .comment {
+        font-size: v.$font-size-md;
+      }
+
+      .playCount {
+        font-size: v.$font-size-md;
+      }
     }
 
     .btns {
       .playBtn {
         width: 70%;
         height: 80%;
+        font-size: v.$font-size-lg;
       }
 
       .infoBtn {
