로고 이미지 크기 수정
- 로그인, 회원가입, 개인정보처리방침 페이지 로고 이미지 크기 수정

--- a/app/styles/join.module.scss
+++ b/app/styles/join.module.scss
@@ -8,10 +8,10 @@
   align-items: center;
 
   .logo {
-    margin: 0;
+    margin: 2rem 0 1rem 0;
     .logo_img {
-      height: 4rem;
-      margin: 1rem;
+      width: auto;
+      height: 3.5rem;
     }
   }
 
