--- a/app/styles/policy.module.scss
+++ b/app/styles/policy.module.scss
@@ -8,11 +8,10 @@
   align-items: center;
 
   .logo {
-    margin: 0;
+    margin: 2rem 0 1rem 0;
     .logo_img {
       width: auto;
       height: 3.5rem;
-      margin: 1rem;
     }
   }
 
