--- a/app/styles/login.module.scss
+++ b/app/styles/login.module.scss
@@ -8,10 +8,10 @@
   align-items: center;
 
   .logo {
-    margin: 0;
+    margin: 2rem 0 1rem 0;
     .logo_img {
-      height: 4rem;
-      margin: 1rem;
+      width: auto;
+      height: 3.5rem;
     }
   }
 
