--- a/app/styles/var.module.scss
+++ b/app/styles/var.module.scss
@@ -7,6 +7,8 @@ $font-size-md: 16px;
 $font-size-lg: 18px;
 $font-size-xl: 20px;
 $font-size-2xl: 22px;
+$font-size-3xl: 30px;
+$font-size-4xl: 35px;
 
 // 색상
 $main-green: #6bde85;
