--- a/app/styles/header.module.scss
+++ b/app/styles/header.module.scss
@@ -73,6 +73,13 @@
         height: 1.5rem;
       }
     }
+
+    .logout {
+      .logout_icon {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+    }
   }
 }
 
