--- a/app/styles/quizCard.module.scss
+++ b/app/styles/quizCard.module.scss
@@ -123,6 +123,7 @@
         fill: v.$white;
         color: v.$white;
         background-color: v.$main-green;
+        transition: all 0.3s;
       }
     }
 
@@ -145,6 +146,7 @@
         fill: v.$white;
         color: v.$white;
         background-color: v.$main-green;
+        transition: all 0.3s;
       }
     }
   }
