회원가입 아이디 중복 검사 API 연동 외
- 회원가입 시 아이디 중복 검사 API 연동
- 회원가입 API 연동
- 공통 모달 컴포넌트 UI 작업
- BlurBackground 컴포넌트 별개 분리
- 회원가입 로직 내 예외 상황 에러 모달 구현

--- a/app/styles/join.module.scss
+++ b/app/styles/join.module.scss
@@ -1,6 +1,15 @@
 /* Join 페이지 */
 @use 'var.module.scss' as v;
 
+@keyframes vibration {
+  from {
+    transform: rotate(1deg);
+  }
+  to {
+    transform: rotate(-1deg);
+  }
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -55,6 +64,10 @@
         border-bottom: 2px solid v.$red;
         padding-left: 0.1rem;
       }
+    }
+
+    .input_vibration {
+      animation: vibration 0.1s infinite;
     }
 
     .join_check {
