회원가입 유효성 검사 실패 관련 CSS 구현
- 회원가입 유효성 검사 실패 대상 객체에 흔들림 효과 CSS 구현

--- a/app/styles/user.module.scss
+++ b/app/styles/user.module.scss
@@ -72,6 +72,10 @@
           &:focus {
             border-bottom: 2px solid v.$main-green;
           }
+
+          &:disabled {
+            background-color: transparent;
+          }
         }
 
         .input_text_error {
