--- a/app/styles/header.module.scss
+++ b/app/styles/header.module.scss
@@ -14,6 +14,10 @@
     .logo_img {
       width: auto;
       height: 3.5rem;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
@@ -65,6 +69,12 @@
         width: 1.3rem;
         height: 1.3rem;
       }
+
+      &:hover {
+        cursor: pointer;
+        fill: v.$main-green;
+        transition: all 0.3s;
+      }
     }
 
     .login {
@@ -78,6 +88,12 @@
       .logout_icon {
         width: 1.5rem;
         height: 1.5rem;
+
+        &:hover {
+          cursor: pointer;
+          fill: v.$main-green;
+          transition: all 0.3s;
+        }
       }
     }
   }
