--- a/app/styles/header.module.scss
+++ b/app/styles/header.module.scss
@@ -166,6 +166,12 @@
           height: 1.3rem;
         }
       }
+      .logout {
+        .logout_icon {
+          width: 1.3rem;
+          height: 1.3rem;
+        }
+      }
     }
   }
 }
