회원정보 수정 API 연동 외
- 회원정보 수정 API 연동
- 회원탈퇴 API 연동
- 공통 모달 컴포넌트 구분 (Info, Action)

--- a/app/styles/user.module.scss
+++ b/app/styles/user.module.scss
@@ -1,6 +1,15 @@
 /* User 페이지 */
 @use 'var.module.scss' as v;
 
+@keyframes vibration {
+  from {
+    transform: rotate(1deg);
+  }
+  to {
+    transform: rotate(-1deg);
+  }
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -111,6 +120,10 @@
         }
       }
 
+      .input_vibration {
+        animation: vibration 0.1s infinite;
+      }
+
       .edit_btn {
         width: 22rem;
         height: 3rem;
@@ -124,6 +137,10 @@
         margin: 2rem;
         font-size: v.$font-size-sm;
         text-decoration: underline;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
 
