LocalStorage 저장 데이터 형식 수정 외
- LocalStorage 저장 데이터 형식 수정
- 관리자 계정 로그인에 따른 컴포넌트 조건부 렌더링 구현

--- a/app/styles/main.module.scss
+++ b/app/styles/main.module.scss
@@ -54,10 +54,10 @@
             background-color: v.$main-deep-green;
           }
         }
-        .dot {
+        .admin {
           display: flex;
           margin-right: 1.5rem;
-          .dot_icon {
+          .admin_icon {
             fill: v.$main-deep-gray;
 
             &:hover {
