--- a/app/styles/modal.module.scss
+++ b/app/styles/modal.module.scss
@@ -39,7 +39,7 @@
     width: 80%;
     height: 4rem;
     overflow: hidden;
-    font-size: v.$font-size-md;
+    font-size: v.$font-size-sm;
     margin-bottom: 1.5rem;
   }
 
