퀴즈 생성 페이지 UI 구현 외
- 퀴즈 생성 페이지 UI 구현
- SelectBox 컴포넌트 구현

--- a/app/styles/filter.module.scss
+++ b/app/styles/filter.module.scss
@@ -52,6 +52,11 @@
     background-color: v.$main-green;
     border-radius: 5px;
     box-shadow: 0.5px 0.5px 0.5px 0.5px v.$main-shadow-gray;
+
+    &:hover {
+      background-color: v.$main-deep-green;
+      transition: all 0.3s;
+    }
   }
 
   // 반응형 모바일 기준
