--- a/app/styles/user.module.scss
+++ b/app/styles/user.module.scss
@@ -38,7 +38,7 @@
         align-items: center;
         margin-bottom: 3rem;
 
-        p {
+        .title.text {
           margin-left: 3rem;
           font-size: v.$font-size-lg;
           font-weight: bold;
