퀴즈 생성 페이지 UI 구현 외
- 퀴즈 생성 페이지 UI 구현
- 퀴즈 생성 로직 구현
- Infomation 컴포넌트 구현

--- a/app/styles/quizCard.module.scss
+++ b/app/styles/quizCard.module.scss
@@ -114,7 +114,7 @@
       border-radius: 5px;
       background-color: v.$main-deep-gray;
 
-      .playIcon {
+      .play_icon {
         height: 0.85rem;
         margin-right: 0.5rem;
       }
@@ -137,7 +137,7 @@
       border-radius: 5px;
       background-color: v.$main-deep-gray;
 
-      .infoIcon {
+      .info_icon {
         width: 0.85rem;
       }
 
