--- a/app/styles/newQuiz.module.scss
+++ b/app/styles/newQuiz.module.scss
@@ -44,6 +44,8 @@
 
         .input_label {
           font-size: v.$font-size-xs;
+          font-weight: bold;
+          margin-bottom: 0.2rem;
         }
 
         .input_text {
@@ -52,7 +54,6 @@
           font-size: 1rem;
           border: 1.5px solid v.$main-deep-gray;
           border-radius: 5px;
-          margin-top: 0.2rem;
           padding-left: 0.3rem;
 
           &:focus {
@@ -106,6 +107,9 @@
             margin-left: 0.9rem;
 
             .option_title {
+              display: flex;
+              justify-content: center;
+              align-items: center;
               margin-left: 3px;
               font-size: v.$font-size-2xs;
               font-weight: bold;
@@ -151,10 +155,109 @@
             }
 
             .quizInfo {
+              display: flex;
+              flex-direction: column;
               width: 30%;
               height: 100%;
               border-left: 1.5px solid v.$main-deep-gray;
               border-right: 1.5px solid v.$main-deep-gray;
+
+              .answers {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                height: 100%;
+                box-sizing: border-box;
+
+                .answers_title {
+                  margin-top: 0.5rem;
+                  margin-left: 5px;
+                  font-size: v.$font-size-2xs;
+                  font-weight: bold;
+                }
+
+                .shortAnswer {
+                  display: flex;
+                  align-items: center;
+                  width: calc(100% - 0.4rem);
+                  height: 2.8rem;
+                  border: 2px solid v.$main-green;
+                  border-radius: 15px;
+                  background-color: v.$white;
+                  margin: 0.2rem;
+                  box-sizing: border-box;
+
+                  .shortAnswer_text {
+                    width: 85%;
+                    margin: 0 0.1rem 0 0.3rem;
+                    border: none;
+                    font-size: v.$font-size-sm;
+                  }
+
+                  .btn_icon {
+                    width: 0.8rem;
+                    height: 0.8rem;
+                    fill: v.$main-deep-gray;
+
+                    &:hover {
+                      cursor: pointer;
+                    }
+                  }
+                }
+
+                .multipleAnswer {
+                  display: flex;
+                  align-items: center;
+                  width: calc(100% - 0.4rem);
+                  height: 2.8rem;
+                  border: 2px solid v.$main-green;
+                  border-radius: 15px;
+                  background-color: v.$white;
+                  margin: 0.2rem;
+                  box-sizing: border-box;
+                  font-size: v.$font-size-sm;
+
+                  .multipleNum {
+                    margin-left: 0.3rem;
+                  }
+
+                  .multiple_text {
+                    width: 70%;
+                    margin: 0 0.3rem;
+                    border: none;
+                    font-size: v.$font-size-sm;
+                  }
+
+                  .multiple_check {
+                    display: flex;
+                    width: 0.8rem;
+                    height: 0.8rem;
+                    border: 1.5px solid v.$main-green;
+
+                    &:hover {
+                      cursor: pointer;
+                    }
+                  }
+
+                  .multiple_check_focused {
+                    display: flex;
+                    width: 0.8rem;
+                    height: 0.8rem;
+                    border: 1.5px solid v.$main-green;
+                    background-color: v.$main-green;
+
+                    .multiple_check_icon {
+                      fill: v.$white;
+                    }
+
+                    &:hover {
+                      cursor: pointer;
+                      border: 1.5px solid v.$main-deep-green;
+                      background-color: v.$main-deep-green;
+                    }
+                  }
+                }
+              }
             }
 
             .quizBtns {
