--- a/app/styles/user.module.scss
+++ b/app/styles/user.module.scss
@@ -38,7 +38,7 @@
         align-items: center;
         margin-bottom: 3rem;
 
-        .title.text {
+        .title_text {
           margin-left: 3rem;
           font-size: v.$font-size-lg;
           font-weight: bold;
@@ -69,6 +69,7 @@
 
         .input_label {
           font-size: v.$font-size-xs;
+          font-weight: bold;
         }
 
         .input_text {
