퀴즈 생성 로직 구현
- 퀴즈 생성 로직 구현
- 퀴즈 문제 이미지 등록 시 다중 이미지 선택 구현

--- a/app/styles/quizCard.module.scss
+++ b/app/styles/quizCard.module.scss
@@ -41,7 +41,8 @@
     overflow: hidden;
     .thumbnail_img {
       height: 100%;
-      object-fit: cover;
+      background-color: v.$main-deep-gray;
+      object-fit: contain;
     }
   }
 
