--- a/app/styles/newQuiz.module.scss
+++ b/app/styles/newQuiz.module.scss
@@ -134,7 +134,7 @@
             box-shadow: 0.5px 0.5px 0.5px 0.5px v.$main-shadow-gray;
             font-size: v.$font-size-md;
             outline: none;
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
             box-sizing: border-box;
             padding: 0.5rem;
 
@@ -142,22 +142,29 @@
               display: flex;
               justify-content: center;
               align-items: center;
-              width: 15%;
+              width: 10%;
               height: 100%;
               border-right: 1.5px solid v.$main-deep-gray;
               font-size: v.$font-size-xl;
               font-weight: bold;
             }
 
-            .quizImg {
+            .quizImgWrapper {
               width: 15rem;
               height: 100%;
+            }
+
+            .quizImg {
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+              background-color: v.$main-deep-gray;
             }
 
             .quizInfo {
               display: flex;
               flex-direction: column;
-              width: 30%;
+              width: 35%;
               height: 100%;
               border-left: 1.5px solid v.$main-deep-gray;
               border-right: 1.5px solid v.$main-deep-gray;
@@ -171,7 +178,7 @@
 
                 .answers_title {
                   margin-top: 0.5rem;
-                  margin-left: 5px;
+                  margin-left: 0.8rem;
                   font-size: v.$font-size-2xs;
                   font-weight: bold;
                 }
@@ -179,12 +186,12 @@
                 .shortAnswer {
                   display: flex;
                   align-items: center;
-                  width: calc(100% - 0.4rem);
+                  width: calc(100% - 0.8rem);
                   height: 2.8rem;
-                  border: 2px solid v.$main-green;
+                  border: 2px solid v.$main-deep-gray;
                   border-radius: 15px;
                   background-color: v.$white;
-                  margin: 0.2rem;
+                  margin: 0.15rem 0.4rem;
                   box-sizing: border-box;
 
                   .shortAnswer_text {
@@ -208,12 +215,12 @@
                 .multipleAnswer {
                   display: flex;
                   align-items: center;
-                  width: calc(100% - 0.4rem);
+                  width: calc(100% - 0.8rem);
                   height: 2.8rem;
-                  border: 2px solid v.$main-green;
+                  border: 2px solid v.$main-deep-gray;
                   border-radius: 15px;
                   background-color: v.$white;
-                  margin: 0.2rem;
+                  margin: 0.15rem 0.4rem;
                   box-sizing: border-box;
                   font-size: v.$font-size-sm;
 
@@ -232,7 +239,7 @@
                     display: flex;
                     width: 0.8rem;
                     height: 0.8rem;
-                    border: 1.5px solid v.$main-green;
+                    border: 1.5px solid v.$main-deep-gray;
 
                     &:hover {
                       cursor: pointer;
@@ -316,7 +323,6 @@
             box-shadow: 0.5px 0.5px 0.5px 0.5px v.$main-shadow-gray;
             font-size: v.$font-size-md;
             outline: none;
-            margin-top: 0.5rem;
 
             &:hover {
               cursor: pointer;
