퀴즈 이미지 변경 기능 구현 외
- 퀴즈 이미지 변경 기능 구현
- 퀴즈 문제 삭제 기능 구현

--- a/app/styles/newQuiz.module.scss
+++ b/app/styles/newQuiz.module.scss
@@ -392,6 +392,19 @@
         }
       }
     }
+
+    .post {
+      display: flex;
+      justify-content: right;
+      align-items: center;
+
+      .postBtn {
+        width: 5rem;
+        height: 2.5rem;
+        font-size: v.$font-size-md;
+        font-weight: bold;
+      }
+    }
   }
 
   // 반응형 모바일 기준
