--- a/app/styles/quiz.module.scss
+++ b/app/styles/quiz.module.scss
@@ -104,16 +104,12 @@
 
         &:hover {
           cursor: pointer;
-
-          .add_icon {
-            width: 1.4rem;
-            height: 1.4rem;
-          }
         }
 
         .add_icon {
           width: 1.3rem;
           height: 1.3rem;
+          fill: v.$main-deep-gray;
         }
       }
 
@@ -145,6 +141,10 @@
           width: 0.8rem;
           height: 0.8rem;
           border: 1.5px solid v.$main-deep-gray;
+
+          .multiple_check_icon {
+            fill: v.$white;
+          }
 
           &:hover {
             cursor: pointer;
