--- a/app/styles/modal.module.scss
+++ b/app/styles/modal.module.scss
@@ -7,8 +7,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 25rem;
-  height: 18rem;
+  width: 28rem;
+  height: 20rem;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -28,7 +28,7 @@
     align-items: center;
     width: 100%;
     height: 3rem;
-    font-size: v.$font-size-xl;
+    font-size: v.$font-size-2xl;
     font-weight: bold;
   }
 
@@ -40,7 +40,7 @@
     height: 4rem;
     overflow: hidden;
     font-size: v.$font-size-md;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
   }
 
   .btns {
@@ -55,9 +55,25 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 4rem;
-      height: 2rem;
-      margin: 0 1rem;
+      width: 5rem;
+      height: 2.5rem;
+      margin: 0 0.5rem;
+      font-size: v.$font-size-md;
+    }
+
+    .cancelBtn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 5rem;
+      height: 2.5rem;
+      margin: 0 0.5rem;
+      font-size: v.$font-size-md;
+      background-color: v.$main-deep-gray;
+
+      &:hover {
+        background-color: v.$deep-red;
+      }
     }
   }
 }
@@ -66,6 +82,26 @@
 // 반응형 모바일 기준
 @media (max-width: 644px) {
   .wrapper {
-    width: 70%;
+    width: 80%;
+
+    .title {
+      font-size: v.$font-size-lg;
+    }
+
+    .description {
+      font-size: v.$font-size-sm;
+    }
+
+    .btns {
+      .btn {
+        width: 4.5rem;
+        height: 2.5rem;
+      }
+
+      .cancelBtn {
+        width: 4.5rem;
+        height: 2.5rem;
+      }
+    }
   }
 }
